deploy/bridge-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge-api
spec:
  selector:
    matchLabels:
      app: bridge
      tier: backend
      track: stable
  replicas: 2
  template:
    metadata:
      labels:
        app: bridge
        tier: backend
        track: stable
    spec:
      containers:
        - name: bridge-api
          image: ebonsignori/bridge-api:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: bridge-api
spec:
  type: ClusterIP
  selector:
    app: bridge
    tier: backend
  ports:
    - protocol: TCP
      port: 40510
      targetPort: 4000
