deploy/bridge-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge-web
spec:
  selector:
    matchLabels:
      app: bridge
      tier: frontend
      track: stable
  replicas: 2
  template:
    metadata:
      labels:
        app: bridge
        tier: frontend
        track: stable
    spec:
      containers:
        - name: bridge-web
          image: ebonsignori/bridge-web:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: bridge-web
spec:
  type: ClusterIP
  selector:
    app: bridge
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
