deploy/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: loki-stack
  annotations:
    kubernetes.io/ingress.class: nginx
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "metrics.ebridge.club"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - metrics.ebridge.club
      secretName: ebridge-tls-metrics-prod
  rules:
    - host: metrics.ebridge.club
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: loki-grafana
                port: 
                  number: 80
