deploy/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "ebridge.club"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: "/api/healthcheck"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/server-alias: "www.ebridge.club" 
spec:
  tls:
    - hosts:
      - www.ebridge.club
      - ebridge.club
      secretName: ebridge-tls-web-prod
  rules:
    - host: ebridge.club
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: bridge-web
                port: 
                  number: 80
